# yaspin

./: .coveragerc  .cspell.json  .editorconfig  .flake8  .gitignore  .pylintrc  .semgrepignore  .travis.yml  Features.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini  yaspin-spellcheck-dict.txt
.github/: FUNDING.yml
.github/workflows/: lint_test_coverage.yml
examples/: advanced_colors.py  basic_usage.py  cli_spinners.py  colors.py  custom_streams.py  demo.py  dynamic_text.py  ellipsis.py  ex1.py  finalizers.py  hide_show.py  hide_show_prompt_toolkit.py  inject_spinner.py  kb_interrupt_handler.py  reverse_spinner.py  right_spinner.py  signals.py  spinner_properties.py  timer_spinner.py  write_method.py
tests/: conftest.py  test_attrs.py  test_ellipsis.py  test_finalizers.py  test_in_out.py  test_inject_spinner.py  test_pipes.py  test_properties.py  test_signals.py  test_spinners.py  test_stream.py  test_timer.py  test_yaspin.py
yaspin/: __init__.py  api.py  base_spinner.py  compat.py  constants.py  core.py  helpers.py  signal_handlers.py  spinners.py  yaspin.py
yaspin/data/: spinners.json
